--- a/calculator.html
+++ b/calculator.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./style/calculator-styling.css"/>
+    <link rel="stylesheet" href="calculator-styling.css"/>
     <title>FNB Calculator App</title>
-    <link rel="icon" href="./assets/icons8-calculator-94.png" type="x-image/icon"/>
+    <link rel="icon" href="/assets/icons8-calculator-94.png" type="x-image/icon"/>
 </head>
 <body>
   <table>
@@ -47,7 +47,7 @@
       <td class ="operatorBtn" colspan="4" onclick="equalsBtnPressed()">=</td>
     </tr>
   </table>
-  <script src="./functions/script.js" >
+  <script src="script.js" >
   </script>
 </body>
 
