--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="calculator-styling.css"/>
+    <link rel="stylesheet" href="/style/calculator-styling.css"/>
     <title>FNB Calculator App</title>
     <link rel="icon" href="/assets/icons8-calculator-94.png" type="x-image/icon"/>
 </head>
@@ -47,7 +47,7 @@
       <td class ="operatorBtn" colspan="4" onclick="equalsBtnPressed()">=</td>
     </tr>
   </table>
-  <script src="script.js" >
+  <script src="/functions/script.js" >
   </script>
 </body>
 
